5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1637_2711.log
== TEST (2019-04-11 10:48:47) 
-- CODE:
a=float(input("valor: "))
b=int(input("quantidade: "))
c=float(input("valor dos tickets"))
d=int(input("quantidade de passes: "))
e=float(input("valor dos passes: "))

if a>(b*c)+(d*e)
print("SUFICIENTE")

else:
    print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 7
    if a>(b*c)+(d*e)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:50) 
-- CODE:
a=float(input("valor: "))
b=int(input("quantidade: "))
c=float(input("valor dos tickets"))
d=int(input("quantidade de passes: "))
e=float(input("valor dos passes: "))

if a>(b*c)+(d*e):
	print("SUFICIENTE")

else:
    print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:08) 
-- CODE:
a=float(input("valor: "))
b=int(input("quantidade: "))
c=float(input("valor dos tickets: "))
d=int(input("quantidade de passes: "))
e=float(input("valor dos passes: "))

if a>(b*c)+(d*e):
	print("SUFICIENTE")

else:
    print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:50:28) 
-- CODE:
a=float(input("valor: "))
b=int(input("quantidade: "))
c=float(input("valor dos tickets: "))
d=int(input("quantidade de passes: "))
e=float(input("valor dos passes: "))

if a>(b*c)+(d*e):
	print("SUFICIENTE")

else:
    print("INSUFICIENTE")
-- EXECUTION TIME:
0.161143
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
